updates to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # OS generated files #
-######################
 .DS_Store
 .DS_Store?
 ._*
@@ -7,5 +6,8 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
-hsrglobal.sublime-project
-hsrglobal.sublime-workspace
+# Sublime Text files
+*.sublime-project
+*.sublime-workspace
+.sublime-gulp.cache
+sublime-gulp.log
